# double-evolution-ia

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  analysis.py  health.py  laboratory.py
backend/app/core/: __init__.py  analysis_view.py  base_rule.py  config.py  decision_engine.py  rule_engine.py  rule_weights.py
backend/app/database/: __init__.py  db.py  init_db.py
backend/app/docs/: REG-001_Pedra_Chave.md  REG-002_Devedor.md  REG-003_Pagadores.md
backend/app/laboratory/: README.md  __init__.py  adaptive_learning_engine.py  backtesting_engine.py  confidence_engine.py  consensus_engine.py  correlation_engine.py  decision_pipeline.py  event_logger.py  event_store.py  explainability_engine.py  laboratory_engine.py  pattern_detector.py  pattern_discovery.py  pattern_score.py  prediction_engine.py  probability_engine.py  regime_detector.py  replay_engine.py  risk_engine.py  seasonality_engine.py  sequence_analyzer.py  signal_engine.py  statistics.py  statistics_engine.py  trend_engine.py
backend/app/models/: __init__.py  analysis.py  rule.py  rule_result.py  user.py
backend/app/rules/: __init__.py  reg_001_pedra_chave.py  reg_002_devedor.py  reg_003_pagadores.py  registry.py
backend/app/schemas/: __init__.py
backend/app/security/: __init__.py
backend/app/services/: __init__.py
docker/: docker-compose.yml
docs/: architecture.md  laboratory.md  laboratory_adaptive_learning.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
(+63 files in other folders)
