[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "double-evolution-ia-backend"
version = "0.1.0-alpha"
description = "Backend service for Double Evolution IA"
authors = [
  {name = "Double Evolution IA"}
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0",
  "sqlalchemy>=2.0"
]
requires-python = ">=3.11"
